# rustpatcher

./: .gitignore  Cargo.toml  LICENSE  README.md  owner_key_example  test.file
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/rustpatcher/: Cargo.toml  README.md  build.rs  test.file
crates/rustpatcher-macros/: Cargo.toml
crates/rustpatcher-macros/src/: lib.rs
crates/rustpatcher/examples/: platforms.rs  publish_new_version.rs  simple.rs
crates/rustpatcher/src/: data.rs  distributor.rs  embed.rs  lib.rs  macho.rs  patch.rs  patcher.rs  topic_tracker.rs  updater.rs  utils.rs  version.rs  version_embed.rs
crates/rustpatcher/xtask/: sign.rs
crates/rustpatcher2/: Cargo.toml  Makefile  README.md  owner_key
crates/rustpatcher2/examples/: owner.rs  simple.rs
crates/rustpatcher2/src/: distributor.rs  embed.rs  lib.rs  patch.rs  patcher.rs  publisher.rs  updater.rs  version.rs
crates/rustpatcher2/src/net/: mod.rs  version_publisher.rs
crates/rustpatcher2/xtask/: sign.rs
examples/: publish_new_version.rs  relay_test.rs  simple.rs
src/: data.rs  lib.rs  utils.rs
