[package]
name = "rustpatcher-macros"
version = "0.1.0"
edition = "2024"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
description = "p2p patching system"
license = "MIT"
repository = "https://github.com/rustonbsd/rustpatcher"
readme = "../../README.md"
keywords = ["networking"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", default-features=false, features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
ctor = "0.4.2"
