[package]
name = "rustpatcher"
version = "0.1.20"
edition = "2024"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
description = "p2p patching system"
license = "MIT"
repository = "https://github.com/rustonbsd/rustpatcher"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]


[dependencies]
iroh = { version = "0.92", default-features = false, features = []}
distributed-topic-tracker = { git = "https://github.com/rustonbsd/distributed-topic-tracker", branch="generalizing-records"}
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_bytes = "0.11"
bytes = { version = "1", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
futures-lite = "2"
z32 = "1"
sha2 = "0.10"
pkarr = "3"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
self-replace = "1"
nix = { version = "0.30", features = ["process"] }
reqwest = "0.12"
dotenv = "0.15"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

rustpatcher_macros = { path = "../rustpatcher-macros", package = "rustpatcher-macros", default-features = true, version = "0.1.0" }
ctor = "0.4"

actor-helper = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
panic = "abort"
features = []