[package]
name = "rustpatcher"
version = "0.2.0"
edition = "2024"
description = "distributed patching system for single binary applications"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/rustpatcher"
homepage = "https://rustonbsd.github.io/"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]

[dependencies]
rustpatcher_macros = { path = "../rustpatcher-macros", package = "rustpatcher-macros", version = "0.2.0" }

ctor = "0.5"
actor-helper = "0.1"
tokio ={ version = "1", features = ["rt-multi-thread","macros","sync"] }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
z32 = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
tempfile = "3"
nix = { version = "0.30", features = ["process"] }
self-replace = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features=false, features = ["std"] }

iroh = { version = "0.92", default-features = false }
postcard = { version = "1" }

distributed-topic-tracker = { version="0.2.1", default-features =  false }

[[example]]
name = "platforms"
path = "examples/platforms.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[bin]]
name = "rustpatcher"
path = "xtask/sign.rs"
