[package]
name = "rustpatcher2"
version = "0.1.1"
edition = "2024"

[dependencies]
rustpatcher_macros = { path = "../rustpatcher-macros", package = "rustpatcher-macros", default-features = true, version = "0.1.1" }

ctor = "0.5"
actor-helper = "0.1"
tokio ={ version = "1", features = ["rt-multi-thread","macros","sync"] }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
z32 = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"

distributed-topic-tracker = { git = "https://github.com/rustonbsd/distributed-topic-tracker", branch="generalizing-records"}

[build-dependencies]
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
anyhow = "1"
z32 = "1"
rand = "0.8"

[[example]]
name = "owner"
path = "examples/owner.rs"

[[bin]]
name = "rustpatcher"
path = "xtask/sign.rs"
dependencies = ["rustpatcher2", "clap"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 5
strip = true
panic = "abort"
debug = false
