[package]
name = "rustpatcher2"
version = "0.1.2"
edition = "2024"

[dependencies]
rustpatcher_macros = { path = "../rustpatcher-macros", package = "rustpatcher-macros", version = "0.1.1" }

ctor = "0.5"
actor-helper = "0.1"
tokio ={ version = "1", features = ["rt-multi-thread","macros","sync"] }
anyhow = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"
z32 = "1"
clap = { version = "4", features = ["derive"] }
once_cell = "1"
tempfile = "3"
nix = { version = "0.30", features = ["process"] }
self-replace = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features=false, features = ["std"] }

iroh = { version = "0.92", default-features = false }
postcard = { version = "1" }

distributed-topic-tracker = { git = "https://github.com/rustonbsd/distributed-topic-tracker", rev="f4a567dad5cfde5eab6dccb3a8784f4bf3197bb9", default-features =  false }

[[example]]
name = "owner"
path = "examples/owner.rs"

[[bin]]
name = "rustpatcher"
path = "xtask/sign.rs"
dependencies = ["rustpatcher2", "clap"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 5
strip = true
panic = "abort"
debug = false
